# stm32-ucos

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
BSP/ST/STM32F7xx_Nucleo_144/: bsp.c  bsp.h  bsp_led.c  bsp_sensor.c  bsp_uart.c
BSP/ST/STM32F7xx_Nucleo_144/Cfg/: stm32f7xx_hal_conf.h
BSP/ST/STM32F7xx_Nucleo_144/GNU/: stm32f767zitx.ld
BSP/ST/STM32F7xx_Nucleo_144/WeatherShield/: i2c.c  i2c.h
Cfg/: cpu_cfg.h  os_cfg_app.h
Source/: main.c
Source/app_task/: app_task.c  app_task.h
Source/logger_task/: logger_task.c  logger_task.h
Source/os_app_hooks/: os_app_hooks.c
Source/sensor_task/: sensor_task.c  sensor_task.h
